--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,5 +10,15 @@
   box-sizing: border-box;
   font-family: sans-serif;
   backgroud: #fff;
-  srool-behavior: smooth;
+  scroll-behavior: smooth;
+  font-family: 'Roboto', sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #a855f7;
+  border-radius: 1rem;
 }
